2004-03-25  Sebastien Couret  <sebastien.couret@elios-informatique.fr>

	* src/fd.cxx: Added CYG_ASSERT bound checking for file descriptor
	numbers (0<fd<CYGNUM_FILEIO_NFD).

2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fio.h: If no POSIX then CYG_FILEIO_DELIVER_SIGNALS
	and CYG_FILEIO_SIGMASK_SET call CYG_UNUSED_PARAM on their
	arguments to silence warnings.
	* src/file.cxx (rename): Use a throw specifier to match
	prototype.

2004-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/io.cxx (readwritev): For EWOULDBLOCK and EAGAIN return
	the number of bytes written if any have been written.

2004-01-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/select.cxx: No need to make pselect() dependent on
	CYGPKG_POSIX - that would depend on the arguments. Assert instead,
	and more correctly make it contingent on CYGPKG_POSIX_SIGNALS.

	* src/fio.h: Separate out signal functionality into its own separate
	test.

2003-12-21  Sandeep Kumar <sandeep@codito.com>

	* src/dir.cxx (readdir_r): Handle NULL dirp argument and return
	EBADF

2003-12-03  Dan Jakubiec  <djakubiec@yahoo.com>

	* src/select.cxx (pselect): Fixed the pselect() call to correctly
	handle NULL timeout arguments.  The previous implementation would
	cause a random timeout value to be used.

2003-11-28  David Woodhouse  <dwmw2@redhat.com>

	* include/fileio.h, include/sockio.h, src/dir.cxx, src/fd.cxx,
	src/io.cxx: Don't include kernel headers if no kernel support.

2003-10-23  Savin Zlobec  <savin@elatec.si>

	* src/io.cxx: Added cyg_fs_fsetinfo and cyg_fs_fgetinfo functions.
	
	* src/file.cxx: Added cyg_fs_setinfo and cyg_fs_getinfo functions.
	
	* include/fileio.h: Added cyg_fs_fsetinfo, cyg_fs_fgetinfo,
	cyg_fs_setinfo and cyg_fs_getinfo function prototypes.

2003-10-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/socket.cxx (bind): Pass a copy of the socket address so the
	stack can modify it without changing the users copy. Bug found by
	reji@codito.com.
